syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "com.blakekhan.charbalancer.client.proto";
option java_outer_classname = "CharBalancerService";

service CharBalancer {
    rpc BalanceString(BalanceStringRequest) returns (BalanceStringResponse) {}
}

message BalanceStringRequest {
    string data = 1;
}

message BalanceStringResponse {
    bool balanced = 1;
}